<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Imisoid</string>

    <string name="sync_button">Synchronizuj</string>
    <string name="menu_network_save">Uložit</string>
    <string name="menu_network">Připojení k serveru</string>
    <string name="menu_calendar">Kalendář</string>
    <string name="menu_add">Přidat</string>
    <string name="button_ok">OK</string>

    <string name="kody_po_prompt">Kódy záznamů</string>
    <string name="error_title">Chyba</string>
    <string name="title_create">Vytvořit</string>
    <string name="title_edit">Editovat</string>
    <string name="title_view">Prohlížení</string>

    <string name="title_arrive">Příchod</string>
    <string name="title_leave">Odchod</string>
    <string name="title_arrive_err">Chybný příchod:\n</string>
    <string name="title_leave_err">Chybný odchod:\n</string>
    <string name="title_leave_btn">Zadej odchod</string>
    <string name="label_note">Poznámka</string>

    <string name="dialog_add_time">"Čas: "</string>
    <string name="dialog_add_type">"Typ: "</string>

    <string-array name="arr_kody_po_desc">
        <item>Normální pracovní doba</item>
        <item>Nemoc</item>
        <item>Dovolená</item>
        <item>Ošetřování člena rodiny</item>
        <item>Studijní volno</item>
        <item>Refundace</item>
        <item>Soukromá přítomnost</item>
        <!--<item>Příchod na pohotovost na prac</item>-->
    </string-array>

    <string-array name="arr_kody_po_values">
        <item>00</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <!--<item>12</item> -->
    </string-array>

    <string-array name="lea_kody_po_desc">
        <item>Normální pracovní doba</item>
        <item>Služebně</item>
        <item>Oběd</item>
        <item>Večeře</item>
        <item>Lékař</item>
        <item>Nemoc</item>
        <item>Dovolená</item>
        <item>Ošetřování člena rodiny</item>
        <item>Studijní volno</item>
        <item>Refundace</item>
       <!-- <item>Odchod na pohotovost mimo prac</item>-->
    </string-array>

    <string-array name="lea_kody_po_values">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <!--<item>11</item>-->
    </string-array>

    <!-- <string-array name="arr_kody_po_desc">
         <item>Normální pracovní doba</item>
         <item>Služebně</item>
         <item>Oběd</item>
         <item>Večeře</item>
         <item>Lékař</item>
         <item>Nemoc</item>
         <item>Dovolená</item>
         <item>Ošetřování člena rodiny</item>
         <item>Studijní volno</item>
         <item>Refundace</item>
         <item>Soukromě</item>
         <item>Odchod na pohotovost mimo pracoviště</item>
     </string-array>-->

    <!-- <string-array name="arr_kody_po_values">
         <item>00</item>
         <item>01</item>
         <item>02</item>
         <item>03</item>
         <item>04</item>
         <item>05</item>
         <item>06</item>
         <item>07</item>
         <item>08</item>
         <item>09</item>
         <item>10</item>
         <item>11</item>
     </string-array>-->

    <string-array name="typ_zakazky">
        <item>-</item>
        <item>A</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>O</item>
        <item>R</item>
        <item>S</item>
        <item>V</item>
        <item>W</item>
    </string-array>

    <string name="deleteChoiceArrive">Příchod</string>
    <string name="deleteChoiceLeave">Odchod</string>
    <string name="deleteChoiceBoth">Obojí</string>

    <!-- Polozky menu pri edit aktivite -->
    <string name="menu_save">Uložit</string>
    <string name="menu_revert">Zpět</string>
    <string name="menu_delete">Smazat</string>
    <string name="menu_edit">Editovat</string>


    <string name="login_username_label">Uživatel</string>
    <string name="login_password_label">Heslo</string>
    <string name="login_ok">Ok</string>

    <string name="network_settings_lab">Připojení k serveru</string>
    <string name="network_host_lab">Doména</string>
    <string name="network_port_lab">Port</string>
    <string name="network_services_reach_lab">Dostupnost</string>
    <string name="network_host_reach_lab">Host</string>
    <string name="network_ws_reach_lab">Webová služba</string>
    <string name="network_db_reach_lab">Databázový server</string>

    <string name="login_activity_loginfail_text_both">Chybné uživatelské jméno nebo heslo.</string>
    <string name="ui_activity_authenticating">Authentikace\u2026</string>
    <string name="menu_refresh">Aktualizovat</string>
    <string name="employees_act_ok">"Seznam zaměstnanců úspěšně aktualizován, záznamů: "</string>
    <string name="act_ok">Aktualizováno</string>
    <string name="menu_records">Výkazy</string>
    <string name="ok">Ok</string>
    <string name="cancel">Zrušit</string>
    <string name="menu_employees_refresh">Aktualizovat zaměstnance</string>
    <string name="menu_employees_present">Přítomní zaměstnanci</string>
    <string name="menu_eventsChart">Graf docházka</string>
    <string name="error_unknown_host">unknown host</string>
    <string name="working">Čekejte prosím...</string>
    <string name="delete_event">Smazat událost</string>
    <string name="title_editing">Editace</string>
    <string name="testing_connection">Testuji spojení...</string>
    <string name="test_connection">Test spojení</string>
    <string name="connection_unavailable">Spojení se nezdařilo</string>
    <string name="device_is_offline">Zařízení není připojeno k síti</string>
    <string name="connection_unavailable_desc">Přejete si změnit nastavení připojení?</string>
    <string name="service_unavailable">Služba není dostupná</string>
    <string name="no_records">Těmto parametrům nevyhovují žádné záznamy</string>
    <string name="no_account_set_title">Neeexistuje účet</string>
    <string name="no_account_set_prev">Nejdříve vytvoř účet pro synchronizaci</string>
    <string name="no_account_set_desc">Není nastaven účet pro synchronizaci, přejete si ho vytvořit?</string>
    <string name="no_position_set">Není nastavena geografická pozice pracoviště</string>
    <string name="login_icp_label">ICP</string>
    <string name="login_activity_loginfail_text_icpmissing">Chybí icp</string>
    <string name="spinnerEmployee_title">Zaměstnanec</string>
    <string name="menu_recordsChart">Graf výkazy</string>
    <string name="menu_switch">Přepnout zobrazení</string>
    <string name="stats_event_tot">Celkem:</string>
    <string name="record_detail_state">Stav</string>
    <string name="record_detail_identification">Zakázka</string>
    <string name="record_detail_time">Odvedené množství</string>
    <string name="record_detail_requirement">Požadavek</string>
    <string name="record_detail_report">Hlášení</string>
    <string name="record_detail_task">Úkol</string>
    <string name="record_detail_note">Poznámka</string>
    <string name="statistics">Statistiky</string>
    <string name="error_perriod_set">Špatně zadané období</string>
    <string name="spinnerRecordType_title">Typ zakázky</string>
    <string name="selectEmp">Vyber zaměstnance</string>
    <string name="noEmp">Není vybrán zaměstnanec</string>
    <string name="menu_color_info">Barvy pro docházku a výkazy</string>
    <string name="eventsType">Události docházky</string>
    <string name="recordsType">Zakázky</string>
    <string name="eventTypeOthers">Ostatní</string>
    <string name="no_item_set">Není vybráno pole období</string>
    <string name="record_detail_date">Datum</string>
    <string name="sync_widgets">Widgety pro přítomnost</string>
    <string name="sync_events">Vlastní docházka</string>
    <string name="sync_employees">Seznam zaměstnanců</string>
    <string name="pref_sync_events_frequency">Synchronizace vlastní docházky</string>
    <string name="sync_settings">Nastavení</string>
    <string name="pref_sync_network_type">Povolit synchronizaci</string>
    <string name="pref_sync_period">Perioda synchronizace</string>
    <string name="pref_network_type">Datový přenos</string>
    <string name="widget_allready_exists">Widget pro daného zaměstnance již existuje</string>
    <string name="widget_label_employees">Imisoid - přítomnost</string>
    <string name="widget_label_shortcut">Imisoid - docházka</string>
    <string name="other_option">Jiný</string>
    <string name="location_settings">Nastavení umístění</string>
    <string name="pref_notification">Upozornění při opomenutí</string>
    <string name="pref_notification_arrive">Chybějící příchod</string>
    <string name="pref_notification_leave">Chybějící odchod</string>
    <string name="server_error">Chyba serveru</string>
    <string name="unknown_error">Neznámá chyba</string>
    <string name="position_error">Nebyla načtena pozice</string>
    <string name="auth_success">Vytvořen účet pro synchronizaci</string>
    <string name="account_allready_exists">Účet již existuje</string>
    <string name="pref_notification_freq">Perioda</string>
    <string name="pref_notification_arrive_summary">Upozornit na chybějící příchod</string>
    <string name="pref_notification_leave_summary">Upozornit na chybějící odchod</string>
    <string name="missing_arrive_event">Chybí příchod</string>
    <string name="missing_leave_event">Chybí odchod</string>
    <string name="missing_event_hint">Dotykem umožníte přidání události</string>
    <string name="menu_alt_view">Alternativní zobrazení</string>
    <string name="only_sub">Pouze podřízení/všichni</string>
    <string name="add_arrive">Přidat příchod</string>
    <string name="add_leave">Přidat odchod</string>
    <string name="title_arrive_btn">Zadej příchod</string>
    <string name="color_dialog_title">Zvol barvu</string>
    <string name="record_detail_kodpra">Pracovník</string>
    <string name="pref_act_period">Perioda aktualizace</string>
    <string name="pref_misc">Ostatní</string>
    <string name="pref_location">Poloha pracoviště</string>
    <string name="location_saved">Poloha nastavena</string>
    <string name="location_not_saved">Poloha nenastavena</string>
    <string name="no_employees">Seznam zaměstnanců je prázdný</string>
    <string name="saved">Uloženo</string>
    <string name="menu_request_position">Získej polohu</string>
    <string name="not_set">Nenastaveno</string>
    <string name="sum_records">"Vykázáno: "</string>
    <string name="sum_events">"Odpracováno: "</string>
    <string name="sum_diff">"Rozdíl: "</string>
    <string name="chart_lab_attendance">Události docházky pro daný den</string>
    <string name="chart_lab_day">Den</string>
    <string name="chart_lab_time">Čas[h]</string>
    <string name="act_fail">Aktualizace selhala</string>
    <string name="records_act_fail">Aktualizace výkazů selhala</string>
    <string name="unauthorized">Neautorizovaný požadavek</string>
    <string name="block_not_editable">Blok nepřítomnosti není editovatelný</string>

</resources>