<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_add"
          android:icon="@drawable/ic_menu_add"
          android:title="@string/menu_add"
          android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/sync_button"
          android:icon="@drawable/ic_menu_refresh"
          android:title="@string/sync_button"
          android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_calendar"
          android:icon="@drawable/ic_menu_my_calendar"
          android:title="@string/menu_calendar"
          android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_alt_view"
          android:icon="@drawable/ic_menu_forward"
          android:title="@string/menu_alt_view"
          android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_eventsChart"
          android:title="@string/menu_eventsChart"
          android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_recordsChart"
          android:title="@string/menu_recordsChart"
          android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_records"
          android:icon="@drawable/ic_menu_my_calendar"
          android:title="@string/menu_records"
          android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_employeesList"
          android:title="@string/menu_employees_refresh"
          android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_employeesPresent"
          android:title="@string/menu_employees_present"
          android:showAsAction="ifRoom|withText"/>
    <!-- <item android:id="@+id/settings_network"
           android:icon="@drawable/ic_menu_settings_holo_light"
           android:title="@string/menu_network"
           android:showAsAction="ifRoom|withText"/>-->
    <!-- <item android:id="@+id/settings_color"
           android:title="@string/menu_color_info"
           android:showAsAction="ifRoom|withText"/>-->
    <item android:id="@+id/settings"
          android:title="@string/sync_settings"
          android:showAsAction="ifRoom|withText"/>
    <!--<item android:id="@+id/location_settings"
          android:title="@string/location_settings"
          android:showAsAction="ifRoom|withText"/>-->
</menu>