<?xml version="1.0" encoding="utf-8"?>
<!-- Menu pri editaci/vkladani ukolu -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_save"
          android:icon="@drawable/ic_menu_save"
          android:title="@string/menu_save"
          android:showAsAction="ifRoom|withText" />
    
    <item android:id="@+id/menu_revert"
              android:icon="@drawable/ic_menu_revert"
              android:title="@string/menu_revert"
              android:showAsAction="ifRoom|withText" />
    
        
        <item android:id="@+id/menu_delete"
              android:icon="@drawable/ic_menu_delete"
              android:title="@string/menu_delete"
              android:showAsAction="ifRoom|withText" />
    
        <item android:id="@+id/menu_edit"
              android:icon="@drawable/ic_menu_compose"
              android:title="@string/menu_edit"
              android:showAsAction="ifRoom|withText" />
</menu>