<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:orientation="vertical">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <!-- Arrive -->
        <Button
                android:id="@+id/arrive_add_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_arrive_btn"
                android:textSize="20sp"/>

        <LinearLayout
                android:id="@+id/arrive_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_arrive"
                    android:textSize="20sp"/>

            <Spinner
                    android:id="@+id/spinner_kod_po_arrive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/arr_kody_po_desc"
                    android:prompt="@string/kody_po_prompt"/>

            <TimePicker
                    android:id="@+id/time_arrive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_note"
                        android:textSize="15sp"/>

                <EditText
                        android:id="@+id/edit_poznamka_arrive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dip"
                        android:ems="25"
                        android:maxLines="1"
                        android:scrollHorizontally="true"
                        android:maxLength="255"/>
            </LinearLayout>
        </LinearLayout>
        <!-- Leave -->

        <Button
                android:id="@+id/leave_add_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_leave_btn"
                android:textSize="20sp"/>

        <LinearLayout
                android:id="@+id/leave_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_leave"
                    android:textSize="20sp"/>

            <Spinner
                    android:id="@+id/spinner_kod_po_leave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/lea_kody_po_desc"
                    android:prompt="@string/kody_po_prompt"/>

            <TimePicker
                    android:id="@+id/time_leave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_note"
                        android:textSize="15sp"/>

                <EditText
                        android:id="@+id/edit_poznamka_leave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dip"
                        android:ems="25"
                        android:maxLines="1"
                        android:scrollHorizontally="true"
                        android:maxLength="255"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>